# jobapp

./: .env.example  .gitignore  CLAUDE.md  README.md  appendjobs  requirements.txt  run_jobs  setup.cfg
src/: append_pending_jobs.py  backfill_job_details.py  check_sheets.py  cleanup_job_data.py  diagnose_job_cards.py  diagnose_job_detail.py  diagnose_linkedin.py  retry_masked_jobs.py  scrape_linkedin.py  test_card_extraction.py  test_selectors.py
