[metadata]
name = linkedin-scraper
version = 0.1.0
description = LinkedIn scraping utilities
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    appendjobs = src.append_pending_jobs:append_pending_jobs
    backfilljobs = src.backfill_job_details:main
